{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 80,
  "lineage": "60f81584-b4b0-f911-4ec1-78fbb1dae94b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:security-group/sg-0a0848d63e2530725",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "sg-0a0848d63e2530725",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2a3aece6b87646e",
            "arn": "arn:aws:ec2:us-east-1:221082189434:elastic-ip/eipalloc-0a2a3aece6b87646e",
            "association_id": "eipassoc-0eaa4c9863c97e013",
            "domain": "vpc",
            "id": "eipalloc-0a2a3aece6b87646e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07b1790b3a7253f53",
            "private_dns": "ip-10-162-80-59.ec2.internal",
            "private_ip": "10.162.80.59",
            "public_dns": "ec2-3-222-204-17.compute-1.amazonaws.com",
            "public_ip": "3.222.204.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onehouse-nat-eip-production"
            },
            "tags_all": {
              "Name": "onehouse-nat-eip-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "onehouse_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:internet-gateway/igw-05c6feed7d66ad02c",
            "id": "igw-05c6feed7d66ad02c",
            "owner_id": "221082189434",
            "tags": {
              "Name": "onehouse-igw-production"
            },
            "tags_all": {
              "Name": "onehouse-igw-production"
            },
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "onehouse_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2a3aece6b87646e",
            "association_id": "eipassoc-0eaa4c9863c97e013",
            "connectivity_type": "public",
            "id": "nat-06e92e42df63162ad",
            "network_interface_id": "eni-07b1790b3a7253f53",
            "private_ip": "10.162.80.59",
            "public_ip": "3.222.204.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003cb9720179b8543",
            "tags": {
              "Name": "onehouse-nat-gateway-production"
            },
            "tags_all": {
              "Name": "onehouse-nat-gateway-production"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b37df4590fdc6b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06e92e42df63162ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b37df4590fdc6b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.onehouse_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c6feed7d66ad02c",
            "id": "r-rtb-066abee3fd1931b5e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066abee3fd1931b5e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.onehouse_igw",
            "aws_route_table.public_rt",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-07b37df4590fdc6b2",
            "id": "rtb-07b37df4590fdc6b2",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e92e42df63162ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-production"
            },
            "tags_all": {
              "Name": "private-route-table-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-066abee3fd1931b5e",
            "id": "rtb-066abee3fd1931b5e",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c6feed7d66ad02c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-production"
            },
            "tags_all": {
              "Name": "public-route-table-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0895459e5b315b7ad",
            "route_table_id": "rtb-07b37df4590fdc6b2",
            "subnet_id": "subnet-0b649bcfa0ef71bed"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eafd03ed6de33a88",
            "route_table_id": "rtb-07b37df4590fdc6b2",
            "subnet_id": "subnet-0fa91398730928ea9"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037cfd471cbdcb896",
            "route_table_id": "rtb-066abee3fd1931b5e",
            "subnet_id": "subnet-003cb9720179b8543"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a356e5ffbaa7f0",
            "route_table_id": "rtb-066abee3fd1931b5e",
            "subnet_id": "subnet-0b79d73b75dddcf4b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0b649bcfa0ef71bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.86.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b649bcfa0ef71bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1-production"
            },
            "tags_all": {
              "Name": "private-subnet-1-production"
            },
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0fa91398730928ea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.87.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa91398730928ea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2-production"
            },
            "tags_all": {
              "Name": "private-subnet-2-production"
            },
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-003cb9720179b8543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.80.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003cb9720179b8543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-production"
            },
            "tags_all": {
              "Name": "public-subnet-1-production"
            },
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0b79d73b75dddcf4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.81.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b79d73b75dddcf4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-production"
            },
            "tags_all": {
              "Name": "public-subnet-2-production"
            },
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "onehouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc/vpc-0d83ad89c717e2866",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.80.0/21",
            "default_network_acl_id": "acl-01440df0337c19d3a",
            "default_route_table_id": "rtb-0ab77df2644569723",
            "default_security_group_id": "sg-0a0848d63e2530725",
            "dhcp_options_id": "dopt-0b21b56400c1fe805",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d83ad89c717e2866",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab77df2644569723",
            "owner_id": "221082189434",
            "tags": {
              "Name": "-production-data-onehouse"
            },
            "tags_all": {
              "Name": "-production-data-onehouse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc-endpoint/vpce-06492ebdba33e69eb",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-06492ebdba33e69eb",
            "owner_id": "221082189434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07b37df4590fdc6b2"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "Onehouse-endpoint-s3-production"
            },
            "tags_all": {
              "Name": "Onehouse-endpoint-s3-production"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d83ad89c717e2866"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    }
  ]
}